* Edit wrapper.template.conf for NtServiceWrapper to add javax.management.builder.initial property

CMSynergy:
----------------------
* Add support for CM Synergy as a sourcecontrol and bootstrapper. Patch by Robert Smith

cruisecontrol.sh:
----------------------
* Handle path conversion under cygwin. Patch by John Woodward

CVS:
----------------------
* Will now work without a localworkingcopy. Patch by Jeff Ramsdale

CVSBootstrapper:
----------------------
* Add resetStickyTags attribute

errors.xsl:
----------------------
* Added errors.xsl to replace compile.xsl. Similar logic, but shows errors and warnings from all tasks.

FileServlet:
----------------------
* Added missing quotes around href attribute, which caused problems for filenames that contain spaces

FileSystem:
----------------------
* Configurable username for reported Modifications

HTMLEmailPublisher:
----------------------
* Add xslFileList attribute as a mechanism to customize the list of .xsl files used. Patch by Peter Buckner

HttpFile:
----------------------
* Configurable username for reported Modification

JabberPublisher:
----------------------
* Add 1 second sleep so multiple jabber publishers work. (CC-119) Patch by Fleur Kelpin

javadoc.xsl:
----------------------
* Improve formatting of Javadoc warnings. Patch by Dan Penhurst

JDOM support:
----------------------
* Upgraded from version b9 to version 1.0

JMX interface:
----------------------
* Fixed bug where pausing a project would keep all projects from building.

Log(Test):
----------------------
* Small patch (CC-121) for new JDOM version by Mark Doliner

manifest.mf:
----------------------
* Corrected Class-Path to refer to the correct jars (includes CC-99)

modifications.xsl:
----------------------
* Fixed matching wrong template for p4 modifications. Patch by Anil Arora
* Removed call to system-property, since it causes errors with JDK 1.5

ModificationSet:
----------------------
* Fix for possible NPE when using ignoreFiles
